# gui

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/pages/: home.rs  mod.rs  results.rs  rules.rs  settings.rs  sorting.rs
src/theme/: container.rs  icon.rs  mod.rs  svg.rs
