[package]
name = "gui"
version = "0.1.0"
edition = "2024"
description = "A fast, rule-based tool for organizing your files"
authors = ["Benjamin Demetz"]
license-file = "LICENSE"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tooka-org/gui"
homepage = "https://tooka.deno.dev"
keywords = ["tooka", "gui", "utility", "automation", "file-organizer"]
categories = ["filesystem"]
rust-version = "1.87"

[dependencies]
eframe = "0.31.1"
iced = { version = "0.13.1", features = ["image", "advanced", "svg"] }
log = "0.4.27"
open = "5.3.2"
rfd = "0.15.3"
tooka-core = "1.0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
